@@ -6,6 +6,11 @@ Spring Boot application using a tree structure for configuration instead of clas
 Using a tree structure for configuration facilitates and promotes test driven development.
 The branches in this project show this process where each branch is a step that delivers a functional and testable product.
 
+Manually defining the `AutoConfiguration` classes to import was done up to the branch `spring-boot-3 `.
+This approach was abandoned in favor of `@EnableAutoConfiguration` due to concerns that auto-configured
+security features might be missed when manually defining the `AutoConfiguration`.  
+The test-classes still use excludes for `AutoConfiguration` in several places to speed-up the tests.
+
 Branches:
 
   - view from bottom to top in [all branches](https://github.com/fwi/sbtreeconf/branches/all)
@@ -20,16 +25,17 @@ Branches:
   - apidocs
   - websecurity
   - spring-boot-3 ([guide](https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-3.0-Migration-Guide/))
+  - simplify-java25
 
 To run using Maven:
 
-```
-sdk use java 21.0.1-tem
+```bash
+sdk use java 25-tem
 mvn spring-boot:run -P run
 # To run all test, including apidocs:
 mvn test
 # To run just one test:
-mvn test -Dtest=IceCreamMockTest -DskipDocs
+mvn test -Dtest=IceCreamMockTest
 # Full build, including static apidocs
 mvn clean package
 # Endpoints:
@@ -45,22 +51,21 @@ curl -u operator:operates -svv -X DELETE http://localhost:8080/api/v1/icecream/1
 To start the app from executable jar-file (containing the `PropertiesLauncher`,
 see also [executable-jar](https://docs.spring.io/spring-boot/docs/current/reference/html/executable-jar.html)):
 
-```
+```bash
 # Build fast without tests or ApiDocs
 mvn clean package -Dmaven.test.skip -DskipDocs
-# Build with ApiDocs
-mvn clean package -DskipTests
 # Run app from resulting jar-file
-mvn dependency:copy -Dartifact=com.h2database:h2:2.2.224
-java -Dloader.debug=false -Dloader.path=target/dependency,src/test/resources \
-  -jar target/sbtreeconf-0.0.1-SNAPSHOT.jar --spring.profiles.active=run
+mvn dependency:copy -Dartifact=com.h2database:h2:2.3.232
+java --sun-misc-unsafe-memory-access=allow \
+  -Dloader.debug=false -Dloader.path=target/dependency,src/test/resources \
+  -jar target/sbtreeconf-0.0.1-SNAPSHOT.jar --spring.profiles.active=test,run
 ```
 
 The apidocs can be found under http://localhost:8080/docs/index.html
 
 All actuator endpoints, except the health-endpoint, require a user with role `manage`.
 
-```
+```bash
 curl -u manager:manages -svv http:/localhost:8081/actuator | jq .
 # Health requires no acces.
 curl -svv http:/localhost:8081/actuator/health | jq .
@@ -77,18 +82,23 @@ curl -u manager:manages -svv http:/localhost:8081/actuator/env | jq .
 
 ApiDocs can be compiled separately using:
 
-```
-mvn package -P apidocs
-# or
+```bash
+mvn test -Dtest=IceCreamApiDocsTest
 mvn asciidoctor:process-asciidoc
+# open target/classes/static/docs/index.html
 ```
 
 The resulting html-documentation is available at `target/classes/static/docs`
 
 # Notes and references
 
-To always see color-coded logging output on console, use:
+To suppress compiler/runtime warnings with Java 25, use:
+```bash
+export MAVEN_OPTS="-Dguice_custom_class_loading=CHILD --sun-misc-unsafe-memory-access=allow"
 ```
+
+To always see color-coded logging output on console, use:
+```bash
 export SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
 ```
 Other options are `NEVER` and `DETECT` (the default).
